Add continue button component. Fix background images. Fix other minor details

--- a/content/01_sectionWelcome.yaml
+++ b/content/01_sectionWelcome.yaml
@@ -16,7 +16,7 @@ data:
     - Los equipos multidisciplinares del CAB ya están estudiando la atmósfera de Marte desde tres estaciones ambientales independientes construidas y operativas bajo su liderazgo, REMS (desde 2012, en el rover Curiosity, Cráter Gale), TWINS (desde 2018, en el Insight, región Elyseum Planitia) y MEDA (2021, en el rover Perseverance, Cráter Jezero, desde febrero de 2021).
 
 assets:
-  backgroundIllustration: /img/01_1200.webp
+  backgroundIllustration: /img/001.webp
   logos:
     - /img/cab_logo.png
     - /img/inta_logo.png
