--- a/content/02_sectionIntroMisions.yaml
+++ b/content/02_sectionIntroMisions.yaml
@@ -13,4 +13,4 @@ data:
     - Conocer la orografía de Marte y cartografiarla fue sin duda el objeto inicial en la observación del planeta. Algunos rasgos geográficos de la superficie marciana son característicos y bien reconocibles desde los primeros mapas, por ejemplo, el cráter Hellas Planitia o el Solis Lacus ya se identifican en los trazados de Mädler y Beer. El astrónomo británico Richard Anthony Proctor (1837-1888) -cuyos mapas fueron resueltos a partir de los dibujos del Reverendo William Rutter Dawes (1799-1868)- sostuvo que las manchas claras y oscuras de la superficie marciana correspondían a continentes y mares, provocando con ello un encendido debate entre sus coetáneos.
 
 assets:
-  backgroundIllustration: /img/02_1200.webp
+  backgroundIllustration: /img/002.webp
