Add final background images & some minor changes

--- a/content/03_sectionExplorers.yaml
+++ b/content/03_sectionExplorers.yaml
@@ -4,7 +4,7 @@
 title: Sección
 menuTitle: Histórico de misiones
 assets:
-  backgroundIllustration: /img/03_2_1200.webp
+  backgroundIllustration: /img/003_b.webp
 
 data:
 
