--- a/content/02_sectionIntroMisions.yaml
+++ b/content/02_sectionIntroMisions.yaml
@@ -20,6 +20,6 @@ assets:
       author: Ricardo Horcajada
       url: /docs/El_murmullo_de_Marte_Ricardo_Horcajada.docx
     - #2
-      title: El murmullo de Marte
-      author: Ricardo Horcajada
-      url: /docs/El_murmullo_de_Marte_Ricardo_Horcajada.docx
+      title: Marte en el mito poético grecolatino
+      author: Francisco Torrego
+      url: /docs/Marte_en_el_mito_poético_grecolatino_Francisco_Torrego.docx
