Change extra resource to pdf (02)

--- a/content/02_sectionIntroMisions.yaml
+++ b/content/02_sectionIntroMisions.yaml
@@ -18,8 +18,8 @@ assets:
     - #1
       title: El murmullo de Marte
       author: Ricardo Horcajada
-      url: /docs/El_murmullo_de_Marte_Ricardo_Horcajada.docx
+      url: /docs/El_murmullo_de_Marte_Ricardo_Horcajada.pdf
     - #2
       title: Marte en el mito poético grecolatino
       author: Francisco Torrego
-      url: /docs/Marte_en_el_mito_poético_grecolatino_Francisco_Torrego.docx
+      url: /docs/Marte_en_el_mito_poético_grecolatino_Francisco_Torrego.pdf
