Add missing image

--- a/content/03_sectionExplorers.yaml
+++ b/content/03_sectionExplorers.yaml
@@ -307,4 +307,4 @@ data:
     curiosities: "Zhurong es un dios del fuego y del sur."
     contribution: "Primera misión y primer éxito de la CNSA en la exploración de Marte con tecnología propia, no dependiendo ni de otras agencias ni del sector privado."
     picture: "/img/explorers/011.webp"
-    picture_flag: "/img/flags/EEUU.svg"
+    picture_flag: "/img/flags/china.svg"
