--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nuxt": "^2.15.3",
     "phosphor-vue": "^1.3.1",
     "scrollmagic": "^2.0.8",
-    "scrollmagic-plugins": "^1.0.8"
+    "scrollmagic-plugins": "^1.0.8",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
