--- a/content/07_SectionCab02.yaml
+++ b/content/07_SectionCab02.yaml
@@ -19,11 +19,10 @@ data:
 assets:
   backgroundIllustration: /img/001.webp
   pictures:
-    - /img/CAB/intro_01.webp
-    - /img/CAB/intro_02.webp
-    - /img/CAB/intro_03.webp
-    - /img/CAB/intro_04.webp
-    - /img/CAB/intro_05.webp
+    - /img/CAB/futu_01.webp
+    - /img/CAB/futu_02.webp
+    - /img/CAB/futu_03.webp
+    - /img/CAB/futu_04.webp
   logos:
     - /img/cab_logo.png
     - /img/inta_logo.png
