Add esd logo. Change several texts. Add new extra resources

--- a/content/01_sectionWelcome.yaml
+++ b/content/01_sectionWelcome.yaml
@@ -5,11 +5,11 @@ title: Sección
 menuTitle: Inicio
 
 data:
-  title: La investigación española en Marte
+  title: ¿Cómo podemos saber la temperatura de Marte? La investigación española en Marte.
   mainText:
-    - El <strong>Centro de Astrobiología</strong>, creado en 1998 como centro mixto entre el Centro Superior de Investigaciones Científicas (CSIC) y el Instituto Nacional de Técnica Aeroespacial (INTA), presentó a la NASA el año de su fundación junto a científicos norteamericanos una propuesta para unir el <strong>CAB</strong> al entonces recién creado NASA Astrobiology Institute (NAI). Su integración se produjo en abril de 2000 convirtiéndose en el primer Miembro Asociado al NAI fuera de los Estados Unidos.
-    - Los equipos multidisciplinares del <strong>CAB</strong> ya están estudiando la atmósfera de Marte desde tres estaciones ambientales independientes construidas y operativas bajo su liderazgo, <strong>REMS</strong> (desde 2012, en el rover Curiosity, en el Cráter Gale), <strong>TWINS</strong> (desde 2018, en el Insight, en la región de Elyseum Planitia), <strong>MEDA</strong> (desde febrero de 2021 en el rover Perseverance, en al Cráter Jezero,).
-    - El <strong>CAB</strong> también participará en el <strong>RLS</strong> (Raman Laser Spectrometer) que viajará a Marte a bordo del rover Rosalind Franklin, en la misión ExoMars de la ESA en 2022.
+    #- El <strong>Centro de Astrobiología</strong>, creado en 1998 como centro mixto entre el Centro Superior de Investigaciones Científicas (CSIC) y el Instituto Nacional de Técnica Aeroespacial (INTA), presentó a la NASA el año de su fundación junto a científicos norteamericanos una propuesta para unir el <strong>CAB</strong> al entonces recién creado NASA Astrobiology Institute (NAI). Su integración se produjo en abril de 2000 convirtiéndose en el primer Miembro Asociado al NAI fuera de los Estados Unidos.
+    #- Los equipos multidisciplinares del <strong>CAB</strong> ya están estudiando la atmósfera de Marte desde tres estaciones ambientales independientes construidas y operativas bajo su liderazgo, <strong>REMS</strong> (desde 2012, en el rover Curiosity, en el Cráter Gale), <strong>TWINS</strong> (desde 2018, en el Insight, en la región de Elyseum Planitia), <strong>MEDA</strong> (desde febrero de 2021 en el rover Perseverance, en al Cráter Jezero,).
+    #- El <strong>CAB</strong> también participará en el <strong>RLS</strong> (Raman Laser Spectrometer) que viajará a Marte a bordo del rover Rosalind Franklin, en la misión ExoMars de la ESA en 2022.
 
 assets:
   backgroundIllustration: /img/001.webp
