--- a/content/03_sectionExplorersHome.yaml
+++ b/content/03_sectionExplorersHome.yaml
@@ -5,14 +5,26 @@ title: Sección
 menuTitle: Marte como lugar
 
 data:
-  title: Marte como lugar
+  title: Marte como lugar. La exploración de la superficie marciana a partir de la década de 1960.
   mainText:
-    - El debate sobre la existencia de vida presente o remota en Marte no pasa por la interpretación de rasgos geológicos como construcciones megalíticas del pasado, sino por la existencia de agua. R. A. Proctor (1837-1888) determinó la presencia de casquetes de hielo en ambos polos planetarios. <strong>Hoy son irrefutables las evidencias de que agua líquida –procedente de lluvia o deshielos debido a actividad volcánica o impactos de asteroides- fluyó por la superficie marciana formando vías fluviales semejantes a las terrícolas, en un pasado remoto</strong>.
-    - Además de tales evidencias que aportaron los satélites Mars Odyssey (2001), Mars Express (2003) y Mars Reconnaissance Orbiter (2006), en sus paseos por la superficie marciana los rovers Spirit y Opportunity (2003) y Phoenix (2008) han hallado barrancos horadados por viejas riadas, lechos y lagos secos, huellas de desplazamientos glaciales, y ciertos tipos rocosos que solo pudieron conformarse en medios acuosos. <strong>Esa probada presencia de agua en Marte sugiere que el planeta pudo haber sido habitable o habitado</strong>, pero no por hombrecillos verdes sino por microorganismos. <strong>Las misiones actuales persiguen la posible existencia de extremófilos</strong>.
-
-  secondaryText:
-    - Desde la década de 1960, las distintas misiones rusas, las <em>Mariner</em> y las <em>Viking</em> americanas, han aportado ingentes datos sobre la geografía marciana que han permitido a los científicos <strong>abrir otra línea de investigación&#58; la edad e historia de Marte</strong>, estableciendo relaciones con la Tierra a partir de ciertas similitudes orográficas.
-    - En 1971, la Mariner 9 proporcionó tal cantidad de imágenes de la superficie marciana que en 1978 se pudo publicar el primer gran mapa geológico representando el relieve del planeta de un modo hasta entonces sólo posible para la Luna o la Tierra. <strong>La observación orográfica en alto detalle de Marte ha demostrado que alguna vez, fue geológicamente tan activo como la Tierra</strong>.
+    - Las distintas misiones enviadas a Marte, ya sea para orbitar a su alrededor o para posarse en él, han aportado ingentes datos sobre la geografía marciana.
+    - <strong>La observación orográfica en alto detalle del planeta ha demostrado que alguna vez fue geológicamente tan activo como la Tierra</strong>.
+    - Uno de los objetivos principales desde el inicio fue buscar pruebas de la posible existencia de agua.
+    - <strong>Hoy se da por supuesto que, en algún momento, hubo agua líquida por su superficie y que actualmente hay hielo debajo del casquete polar y en el subsuelo</strong>.
+    - Esa presencia de agua en Marte sugiere que <strong>el planeta pudo haber sido habitable o habitado</strong>.
+  #secondaryText:
+    #- Desde la década de 1960, las distintas misiones rusas, las <em>Mariner</em> y las <em>Viking</em> americanas, han aportado ingentes datos sobre la geografía marciana que han permitido a los científicos <strong>abrir otra línea de investigación&#58; la edad e historia de Marte</strong>, estableciendo relaciones con la Tierra a partir de ciertas similitudes orográficas.
+    #- En 1971, la Mariner 9 proporcionó tal cantidad de imágenes de la superficie marciana que en 1978 se pudo publicar el primer gran mapa geológico representando el relieve del planeta de un modo hasta entonces sólo posible para la Luna o la Tierra. <strong>La observación orográfica en alto detalle de Marte ha demostrado que alguna vez, fue geológicamente tan activo como la Tierra</strong>.
 
 assets:
   backgroundIllustration: /img/003.webp
+  resources:
+    - #1
+      title: Marte como lugar
+      author: Grupo de investigación e/s/d
+      url: /docs/02/Marte_como_lugar.pdf
+    - #2
+      title: Relación histórica de misiones a Marte a partir de 1960
+      author: Grupo de investigación e/s/d
+      url: /docs/02/Cronologia_de_las_observaciones_de_marte_hasta_1960.pdf
+
