--- a/content/06_SectionCab01.yaml
+++ b/content/06_SectionCab01.yaml
@@ -7,12 +7,17 @@ menuTitle: Inicio
 data:
   title: El CAB
   mainText:
-    - El Centro de Astrobiología nace en 1998-1999 como centro mixto entre el Centro Superior de Investigaciones Científicas (CSIC) y el Instituto Nacional de Técnica Aeroespacial (INTA).
-    - Las instalaciones principales del CAB se sitúan en Torrejón de Ardoz (campus del INTA) y en Villanueva de la Cañada (sede del Centro Europeo de Astronomía Espacial, ESAC) ambas localidades cercanas a Madrid.
-    - Su equipo multidisciplinar de científicos e ingenieros lo convierten en un centro de investigación transdisciplinar ideal para abordar la astrobiología.
-    - El  CAB ha sido reconocido con el premio de Excelencia Científica «María de Maeztu» por el Ministerio de Ciencia español.
+    - Las instalaciones principales del <strong>CAB</strong> se sitúan en Torrejón de Ardoz (campus del INTA) y en Villanueva de la Cañada (sede del Centro Europeo de Astronomía Espacial, ESAC) ambas localidades cercanas a Madrid.
+    - <strong>Su equipo multidisciplinar de científicos e ingenieros</strong> (astrofísicos, planetólogos, geólogos, geoquímicos, químicos, geomicrobiólogos, microbiólogos moleculares, ingenieros e ingenieros de sistemas) <strong>lo convierten en un centro de investigación transdisciplinar ideal para abordar la astrobiología</strong>.
+    - Actualmente el CAB cuenta con más de 150 trabajadores organizados funcionalmente en cuatro departamentos, <strong>Astrofísica, Evolución Molecular, Planetología y Habitabilidad e Instrumentación Avanzada. </strong>.
   secondaryText:
-    - Actualmente el CAB cuenta con más de 150 trabajadores organizados funcionalmente en cuatro departamentos, Astrofísica, Evolución Molecular, Planetología y Habitabilidad e Instrumentación Avanzada. Varios laboratorios están equipados con instalaciones e instrumentación para múltiples técnicas, tales como bioquímica, ecología molecular, secuenciación de ADN, microbiología, geología, geomineralogía, geoquímica, química orgánica, análisis de isótopos estables, capacidades de nano dispensación y microarrays, instalaciones para la simulación de impactos de meteoritos, cámaras de simulación de alto vacío, cámaras de alta presión, una cámara medioambiental y un simulador de viento marciano, y un criostato para el desarrollo de detectores IR para aplicaciones astronómicas.
+    - Cuenta con varios <strong>laboratorios</strong> equipados con instalaciones e instrumentación para múltiples técnicas.
+    - El CAB ha sido reconocido con el <strong>premio de Excelencia Científica «María de Maeztu»</strong> por el Ministerio de Ciencia español.
+    - La investigación en el CAB se centra principalmente en cuatro líneas de investigación.
+    - <strong>Formación y evolución de galaxias, el medio interestelar, estrellas y planetas.</strong>
+    - <strong>Evolución y adaptación molecular.</strong>
+    - <strong>Evolución y caracterización de los posibles entornos habitables en el Sistema Solar.</strong>
+    - <strong>Desarrollo de instrumentación avanzada.</strong>
 
 assets:
   backgroundIllustration: /img/001.webp
