--- a/content/07_SectionCab02.yaml
+++ b/content/07_SectionCab02.yaml
@@ -7,14 +7,13 @@ menuTitle: Inicio
 data:
   title: La investigación en el CAB
   mainText:
-    - Para abordar estas cuestiones fundamentales, la investigación en el CAB se centra en las siguientes líneas de investigación
-    - <strong>Formación y evolución de galaxias, el medio interestelar, estrellas y planetas</strong>. Astrofísica extragaláctica y estelar, planetología comparativa y astrofísica molecular.
-    - <strong>Evolución y adaptación molecular</strong>. Química prebiótica; adaptación molecular de sistemas replicativos; adaptación molecular metabólica y dependiente del medio ambiente; biomarcadores moleculares.
+    - <strong>Los científicos del CAB contribuirán a la ciencia y operación de RLS (Raman Laser Spectrometer)</strong> que volará en la misión ExoMars de la ESA a bordo del <strong>rover Rosalind Franklin</strong> a Marte después de su lanzamiento en 2022.
+    - Particularmente relevante será la <strong>misión PLATO (ESA), que buscará y caracterizará planetas similares a la Tierra y sus atmósferas</strong>.
+
   secondaryText:
-    - <strong>Evolución y caracterización de los posibles entornos habitables en el Sistema Solar</strong>. Geomicrobiología de los ambientes extremos, geología y atmósferas planetarias, y firmas ambientales y biológicas.
-    - <strong>Desarrollo de instrumentación avanzada</strong>. Instrumentación astronómica e instrumentación para la exploración planetaria in situ; cámaras de simulación terrestre.
-    - Los científicos del CAB contribuirán a la ciencia y operación de RLS (Raman Laser Spectrometer) que volará en la misión ExoMars de la ESA a bordo del rover Rosalind Franklin a Marte después de su lanzamiento en 2022.
-    - Particularmente relevante será la misión PLATO (ESA), que buscará y caracterizará planetas similares a la Tierra y sus atmósferas.
+    - También desarrolla proyectos de <strong>investigación en ambientes y procesos análogos aquí, en la Tierra</strong>, para mejorar nuestra comprensión de cómo la vida puede existir e interactuar tanto en entornos de superficie como en el subsuelo profundo.
+    - <strong>El CAB tiene los medios, las instalaciones, los científicos y un magnífico centro para abordar y contribuir a los principales retos de la Astrobiología en el futuro cercano</strong>.
+
 
 assets:
   backgroundIllustration: /img/001.webp
@@ -27,3 +26,8 @@ assets:
     - /img/cab_logo.png
     - /img/inta_logo.png
     #- /img/placeholder_logo.png
+  resources:
+    - #1
+      title: Visita la web CAB
+      author: Para conocer mejor sus proyectos
+      url: https://cab.inta-csic.es/investigacion/proyectos/
